// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PxeTemplateFolders Component should render with empty folders array 1`] = `
<div>
  <div
    id="template_folders_div"
  >
    <div
      class="miq-data-table template-folders"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-1"
                >
                  Click to sort rows by Name header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-1"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Name
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class="clickable-row"
              tabindex="0"
              title="Click to view details"
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <svg
                    aria-label="carbon--Folder"
                    class="icon carbon-icons-style carbon--Folder"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.17,6l3.42,3.41.58.59H28V26H4V6h7.17m0-2H4A2,2,0,0,0,2,6V26a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2H16L12.59,4.59A2,2,0,0,0,11.17,4Z"
                    />
                  </svg>
                  <span
                    class="cds--front-line"
                    title="Examples (read only)"
                  >
                    Examples (read only)
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`PxeTemplateFolders Component should render with folders data 1`] = `
<div>
  <div
    id="template_folders_div"
  >
    <div
      class="miq-data-table template-folders"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-3"
                >
                  Click to sort rows by Name header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-3"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Name
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class="clickable-row"
              tabindex="0"
              title="Click to view details"
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <svg
                    aria-label="carbon--Folder"
                    class="icon carbon-icons-style carbon--Folder"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.17,6l3.42,3.41.58.59H28V26H4V6h7.17m0-2H4A2,2,0,0,0,2,6V26a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2H16L12.59,4.59A2,2,0,0,0,11.17,4Z"
                    />
                  </svg>
                  <span
                    class="cds--front-line"
                    title="Examples (read only)"
                  >
                    Examples (read only)
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="clickable-row"
              tabindex="1"
              title="Click to view details"
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <svg
                    aria-label="carbon--Folder"
                    class="icon carbon-icons-style carbon--Folder"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.17,6l3.42,3.41.58.59H28V26H4V6h7.17m0-2H4A2,2,0,0,0,2,6V26a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2H16L12.59,4.59A2,2,0,0,0,11.17,4Z"
                    />
                  </svg>
                  <span
                    class="cds--front-line"
                    title="Folder 1"
                  >
                    Folder 1
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="clickable-row"
              tabindex="2"
              title="Click to view details"
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <svg
                    aria-label="carbon--Folder"
                    class="icon carbon-icons-style carbon--Folder"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.17,6l3.42,3.41.58.59H28V26H4V6h7.17m0-2H4A2,2,0,0,0,2,6V26a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2H16L12.59,4.59A2,2,0,0,0,11.17,4Z"
                    />
                  </svg>
                  <span
                    class="cds--front-line"
                    title="Folder 2"
                  >
                    Folder 2
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
